--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
   background-image: url(https://i.pinimg.com/originals/b0/28/a2/b028a2493053bcd5537605a92d15593e.jpg);
-  }
+  background-size: cover;  
+}
 body * {
   font-family: cursive;
   margin-left: auto;
@@ -27,10 +28,10 @@ h1 {
 }
 
 section {
-    height:30%;
-    width: 90%;
-    justify-content: space-around;   
-    display: flex;
+  height:30%;
+  width: 90%;
+  justify-content: space-around;   
+  display: flex;
 }
 
   
@@ -40,11 +41,11 @@ button{
   }
 
 #principal button{
-border-radius: 15px;
-height: 10%;
-width: 30%;
-font-size: 40px;
-margin: 20%;
+  border-radius: 15px;
+  height: 10%;
+  width: 30%;
+  font-size: 40px;
+  margin: 20%;
 }
 
 #principal button:last-child{
@@ -58,8 +59,8 @@ margin: 20%;
 }
 
 img{
-  width: 16%;
-  height: 16%;
+  width: 20%;
+  height: 20%;
       
  }
 
@@ -70,7 +71,7 @@ img{
 }
 
 .imagenesPrincipal :last-child {
-    margin-left: 28%;
+  margin-left: 40%;
 }
 
 h2{
@@ -80,11 +81,17 @@ h2{
   margin-top: 50px;
   }
 
+  .insertQuestion {
+  height: 50%;
+  width: 60%;
+}
+
 .quiz{
-  
+  margin-top: 3%;
   width: 100%;
   height: 300px;
   background-color: #E1F8EA;
+  border-color: #E1F8EA ;
   justify-content: flex-start;
   mix-blend-mode:hard-light;
   color: black;
@@ -96,40 +103,39 @@ h2{
   text-align: center;
   
 }
+
 #teacherView img:first-child{
   position: absolute;
-  margin: -18% 5%;
+  margin: -12% 5%;
   height: 140px;
   width: 140px;
-}
-
-#teacherView button:first-child{
-
-font-size: 15em;
-margin-top: 100px;
-width: 80px;
-height: 50;
-
 }
 
 #answer h2:first-child{
   text-align: left;
   font-size: 40px;
   background-color: #EFC753;
-
   }
 
-  h3{
-    text-align:center;
-    background-color:  #EFC753;
-    font-size: 50px;
-    margin-top: 15%;
-    
+#send {
+  position: absolute;
+  margin: 30% 41% 0 0;
+  width: 5em;
+  height: 2em;
+  border-radius: 10px;
+  font-size: 20px;
+  }
+  
+h3{
+  text-align:center;
+  background-color:  #EFC753;
+  font-size: 50px;
+  margin-top: 15%;
   }
 
 #studentView img:first-child{
   position: absolute;
-  margin: -18% 5%;
+  margin: -12% 5%;
   height: 140px;
   width: 140px;
 }
@@ -138,46 +144,39 @@ height: 50;
   background-color: #E1F8EA;
   mix-blend-mode:hard-light;
   justify-content: center;
-  height: 15em;
-  width: 20em;
-  font-size: 20px;
+  text-align: center;
+  height: 6em;
+  width: 13em;
+  font-size: 50px;
+  margin: 3%;
 }
 
-.botonEstudiante{
+#codeOfStudent {
   position: absolute;
-  bottom: -40%;
-  width:60%;
-  left: 55%;
-  font-size: 30px;
-        
+  margin: 27% 0 0 80%;
+  width: 8em;
+  height: 3em;
+  border-color: black;
+  
 }
+
 #code {
 position: absolute;
-margin-top: 14%;
-left: 40%;
-border-radius: 15px;
-width: 150px;
-font-size: 30px;
+margin: 32% 0 0 80%;
+border-radius: 10px;
+width: 110px;
+font-size: 20px;
+padding: 5px;
 }
+
+
 table{
+  table-layout: fixed;
+  border-collapse: collapse;
   background-color: #E1F8EA;
   mix-blend-mode:hard-light;
-  margin-left: 9px;
-  height: 600px;
-  width: 800px;
-}
-
-td {
   font-size: 40px;
-  text-align: left;
-  margin-left: 30px;
-}
-
-.insertQuestion{
-  width: 48%;
-  display: flex;
-  flex-direction: column;
-
+  letter-spacing: 2px;
 }
 
 .decode{
@@ -191,18 +190,40 @@ form{
       display: flex;
   }
 
-  .answer{
-      height: 15em;
-      width: 20em;
+.answer{
+  height: 15em;
+  width: 25em;
   background-color: #79B8DB;
   justify-content: center;
   text-align: justify;
   color: black;
   font-size: 20px;
-   margin-left: 40px;
-   margin-top: 22px;
+  margin-left: 40px;
+  margin-top: 22px;
   }
 
-  .codigo{
-    justify-self: right;
+#codeTwo {
+  position: absolute;
+  margin: 15% 0 0 16%;
+  width: 8em;
+  height: 3em;
+  border-color: black;
   }
+ 
+#decodeButton {
+  position: absolute;
+  margin: 40% 0 0 33%;
+  border-radius: 10px;
+  width: 110px;
+  font-size: 20px;
+  padding: 5px;
+}
+
+#back {
+  position: absolute;
+  margin: 5% 0 0 80%;
+  border-radius: 10px;
+  width: 110px;
+  font-size: 20px;
+  padding: 5px;
+}
